<resources>
    <string name="app_name">Quick App</string>
    <string name="nav_home">Home</string>
    <string name="nav_create">Create Quick Test</string>
    <string name="nav_answer">Answer Test</string>
    <string name="nav_history">History</string>
    <string name="nav_exit">Exit</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">List Question</string>
    <string name="second_fragment_label">Create Quick Test</string>
    <string name="answer_fragment_label">Answer Test</string>
    <string name="next">Next</string>
    <string name="confirm">Confirm</string>
    <string name="finish">Finish</string>

    <string name="create" />
    <string name="add" />
    <string name="title_activity_screen_exam">ScreenExam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_screen_slide_exam">ScreenSlideExamActivity</string>

</resources>