<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/ListQuestionFragment">

    <fragment
        android:id="@+id/ListQuestionFragment"
        android:name="com.baochau.dmt.quickapp.questions.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/CreateQuestionFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_MainActivity"
            app:destination="@id/MainActivity" />
    </fragment>
    <fragment
        android:id="@+id/CreateQuestionFragment"
        android:name="com.baochau.dmt.quickapp.questions.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/ListQuestionFragment" />
    </fragment>
    <fragment
        android:id="@+id/AnswerFragment"
        android:name="com.baochau.dmt.quickapp.exam.AnswerFragment"
        android:label="@string/answer_fragment_label"
        tools:layout="@layout/fragment_exam">
        <action
            android:id="@+id/action_AnswerFragment_to_MainActivity"
            app:destination="@id/MainActivity" />
    </fragment>
    <activity
        android:id="@+id/MainActivity"
        android:name="com.baochau.dmt.quickapp.MainActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_main" />
    <fragment
        android:id="@+id/HistoryFragment"
        android:name="com.baochau.dmt.quickapp.fragment.HistoryFragment"
        android:label="HistoryFragment"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_HistoryFragment_to_MainActivity"
            app:destination="@id/MainActivity" />
    </fragment>
</navigation>